--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -22,14 +22,14 @@
             /* max-width: 100%; */
         }
 
-        .container {
+        /* .container {
             display: flex;
             justify-content: center;
             flex-direction: column;
-            margin: 2rem;
+            margin: 2rem; */
             /* width: 100%;
             box-sizing: border-box; */
-        }
+        /* } */
     </style>
 </head>
 
@@ -61,6 +61,14 @@
             </ul>
         </div>
     </nav>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
     {% block body %}{% endblock body %}
 
     <!-- Optional JavaScript -->
