--- a/base/templates/clubview.html
+++ b/base/templates/clubview.html
@@ -1,21 +1,78 @@
-{% extends 'main.html' %}
+<!doctype html>
+<html lang="en">
 
-{% block title %}{{club.club_name}}{% endblock title %}
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block body %}
-<div class="mx-4 my-4">
-    <h4>{{club.club_name}}</h4>
-    <img src="/media/{{club.logo}}" alt="">
-</div>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-<h4 class="mx-4 my-4">Members</h4>
-{% for member in members %}
-<div class=" mx-4">
-    {{member.first_name}}
-</div>
-{% empty %}
-    <!--If there are no members-->
-    <p>No members yet!</p>
-{% endfor %}
+    <title>{% block title %}{{club.club_name}}{% endblock title %}</title>
+</head>
 
-{% endblock body %}
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">InvManage</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="accounts/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="mx-4 my-4">
+        <h4>{{club.club_name}}</h4>
+        <img src="/media/{{club.logo}}" alt="">
+    </div>
+    <div class="card card-body mx-3">
+        <table class="table ">
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+
+                    <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for member in members %}
+                <tr>
+                    <td>{{member.first_name}} {{member.last_name}}</td>
+                    <td>@mdo</td>
+                </tr>
+                {% empty %}
+                <!--If there are no members-->
+                <tr>
+                    <td colspan="4">No members yet!</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    -->
+</body>
+
+</html>
