--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -6,7 +6,9 @@
 
 
 <div class="container">
-    <h3 style="margin-top: 8px;">Clubs</h3>
+    <div class="my-3">
+        <h3>Clubs</h3>
+    </div>
     <div class="cards ">
         {% for club in clubs %}
         <div class="card mx-3 my-5" style="width: 12rem; height: 17rem;">
