--- a/base/templates/clubview.html
+++ b/base/templates/clubview.html
@@ -20,8 +20,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
+                        <a class="nav-link active" href="{% url 'clubview' club.id %}">Users</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Items</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Requests</a>
+                    </li>
+                    
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
