--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -7,8 +7,10 @@
 
 <div class="container">
     <div class="my-3">
-        <h3>Clubs</h3>
+        <h3>Clubs <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a>git </h3>
+        
     </div>
+    
     <div class="cards ">
         {% for club in clubs %}
         <div class="card mx-3 my-5" style="width: 12rem; height: 17rem;">
