Extended user model with Info, shifted Info to accounts app

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="my-3">
-        <h3>Clubs <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a>git </h3>
+        <h3>Clubs <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a></h3>
         
     </div>
     
