--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -16,7 +16,7 @@
         <div class="card mx-3 my-5" style="width: 12rem; height: 17rem;">
             <img class="card-img-top" src="/media/{{club.logo}}">
             <div class="card-body">
-                <p class="card-title"><a href="{% url 'clubview' club.id %}">{{club.club_name}}</p></a>
+                <p class="card-title"><a href="{% url 'club_view' club.id %}">{{club.club_name}}</p></a>
             </div>
         </div>
         {% endfor %}
