--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -19,7 +19,7 @@
             margin: 1rem;
             flex-wrap: wrap;
             align-items: center;
-            justify-content: center;
+            /* justify-content: center; */
             /* max-width: 100%; */
         }
     </style>
