--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -1,27 +1,80 @@
-{% extends 'main.html' %}
+<!doctype html>
+<html lang="en">
 
-{% block title %}Home{% endblock title %}
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block body %}
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <title>Home | InvManage</title>
+    <style>
+        .cards {
+            display: flex;
+            /* flex-direction: row; */
+            margin: 1rem;
+            flex-wrap: wrap;
+            align-items: center;
+            /* justify-content: center; */
+            /* max-width: 100%; */
+        }
+    </style>
+</head>
 
-<div class="container">
-    <div class="my-3">
-        <h3>Clubs <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a></h3>
-        
-    </div>
-    
-    <div class="cards mx-0">
-        {% for club in clubs %}
-        <div class="card mx-3 my-5" style="width: 12rem; height: 17rem;">
-            <img class="card-img-top" src="/media/{{club.logo}}" height="180px" width="180px">
-            <div class="card-body">
-                <p class="card-title"><a href="{% url 'club_view' club.id %}">{{club.club_name}}</p></a>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">InvManage</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="accounts/logout">Logout</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        {% endfor %}
+    </nav>
+    <div class="container">
+        <div class="my-3">
+            <h3>Clubs <a id="add-link" href="{% url 'club_add' %}"><i class="fa fa-plus-circle"></i></a></h3>
+
+        </div>
+
+        <div class="cards mx-0">
+            {% for club in clubs %}
+            <div class="card mx-3 my-5" style="width: 12rem; height: 17rem;">
+                <img class="card-img-top" src="/media/{{club.logo}}" height="180px" width="180px">
+                <div class="card-body">
+                    <p class="card-title"><a href="{% url 'club_view' club.id %}">{{club.club_name}}</p></a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+
+
     </div>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% block body %}{% endblock body %}
 
-
-</div>
-{% endblock body %}
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+</body>
