--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -9,20 +9,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>{% block title %}{% endblock title %} | InvManage</title>
-    <style>
-        .cards {
-            display: flex;
-            /* flex-direction: row; */
-            margin: 1rem;
-            flex-wrap: wrap;
-            align-items: center;
-            /* justify-content: center; */
-            /* max-width: 100%; */
-        }
-    </style>
+
 </head>
 
 <body>
@@ -32,7 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
+                        <a class="nav-link active" href="{% url 'club_view' club.id %}">Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url 'items_view' club.id %}">Items</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
