--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -36,6 +36,10 @@
             </div>
         </div>
     </nav>
+    <div class="mx-4 my-4">
+        <h4>{{club.club_name}}</h4>
+        <img src="/media/{{club.logo}}" alt="">
+    </div>
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
