different pages for different users upon login

--- a/base/templates/index_member.html
+++ b/base/templates/index_member.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">InvManage</a>
+            <a class="navbar-brand" href="{% url 'index_member' request.user.club_set.first.id %}">InvManage</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
