No status option in request form

--- a/base/templates/request_add.html
+++ b/base/templates/request_add.html
@@ -6,9 +6,11 @@
 <div class="mx-4 my-4">
     <form action="" method="POST" >
         {% csrf_token %}
-        <!-- <p>Item: {{form.item}}</p>
-        <p>Qty: {{form.qty}}</p> -->
-        {{form.as_p}}
+        <p>Requested By: {{form.requested_by}}</p>
+        <p>Club: {{form.club}}</p>
+        <p>Item: {{form.item}}</p>
+        <p>Qty: {{form.qty}}</p>
+        <!-- {{form.as_p}} -->
         <button type="submit">Add Request</button>
     </form>
 </div>
