--- a/base/templates/index_member.html
+++ b/base/templates/index_member.html
@@ -24,12 +24,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
+                        <a class="nav-link active" href="{% url 'profile' %}">Hi, {{user.first_name}}</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="accounts/logout">Logout</a>
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                 </ul>
             </div>
