--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -30,7 +30,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="accounts/logout">Logout</a>
+                        <a class="nav-link" href="{% url 'logout.html' %}">Logout</a>
                     </li>
                 </ul>
             </div>
