--- a/base/templates/items_view.html
+++ b/base/templates/items_view.html
@@ -29,10 +29,10 @@
                         <div class="card" style="width: 220px;">
                             <img src="/media/{{i.image}}" class="card-img-top" alt="{{i.item_name}}" height="220px" width="220px">
                             {% comment %} <img src="{{i.image.url}}" class="card-img-top" alt="{{i.item_name}}" height="220px" width="220px"> {% endcomment %}
-                            <div class="card-body">
+                            <a href="{% url 'item_update' i.id %}"><div class="card-body">
                                 <h5 class="card-title">{{i.item_name}}</h5>
                                 <p class="card-text">{{i.qty}}</p>
-                            </div>
+                            </div></a>
                         </div>
                     </div>
                     {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
