--- a/base/templates/main_admin.html
+++ b/base/templates/main_admin.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,44 +11,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>{% block title %}{% endblock title %} | InvManage</title>
-
+    <style>
+        .cards {
+            display: flex;
+            /* flex-direction: row; */
+            margin: 1rem;
+            flex-wrap: wrap;
+            align-items: center;
+            /* justify-content: center; */
+            /* max-width: 100%; */
+        }
+    </style>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            {% if request.user.info.designation == 'Admin' %}
             <a class="navbar-brand" href="/">InvManage</a>
-            {% elif request.user.info.designation == 'Convenor' %}
-            <a class="navbar-brand" href="{% url 'club_view' club.id %}">InvManage</a>
-            {% else %}
-            <a class="navbar-brand" href="{% url 'index_member' request.user.club_set.first.id %}">InvManage</a>
-            {% endif %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'profile' %}">Hi, {{request.user.first_name}}</a>
+                        <a class="nav-link active" href="#">Hi, {{user.first_name}}</a>
                     </li>
-                    {% if request.user.info.designation == 'Convenor' or request.user.info.designation == 'Admin' %}
-                    
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'club_view' club.id %}">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'items_view' club.id %}">Items</a>
-                    </li>
-        
-                    {% endif %}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="accounts/logout">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
@@ -58,12 +49,7 @@
     </div>
     {% endfor %}
     {% endif %}
-
-    <div class="mx-4 my-4">
-        <h4>{{club.club_name}}</h4>
-        <img src="/media/{{club.logo}}" alt="">
-    </div>
-
+    
     {% block body %}{% endblock body %}
 
     <!-- Optional JavaScript -->
@@ -72,5 +58,4 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
