--- a/base/templates/main.html
+++ b/base/templates/main.html
@@ -1,3 +1,4 @@
+<!-- This template acts as a base for all templates except the ones being done by main_admin.html -->
 <!doctype html>
 <html lang="en">
 
