--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 
 
 	<style>
@@ -14,13 +15,15 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: #25274D !important;
+			font-family: 'Nunito', sans-serif;
+            color: white;
 		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+			background: black;
 			position: relative;
 			display: flex;
 			justify-content: center;
@@ -44,7 +47,7 @@
 
 		.login_btn {
 			width: 100%;
-			background: #33ccff !important;
+			background: #25274D !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -55,7 +58,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #f7ba5b !important;
+			background: #25274D !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -71,6 +74,11 @@
 			color: #fff;
 			padding: 10px;
 			margin-top: 10px;
+		}
+
+		input[type=text], input[type=password]{
+			background-color: rgb(29, 27, 27);
+
 		}
 	</style>
 
@@ -111,12 +119,12 @@
                 <p id="messages">{{message}}</p>
                 {% endfor %}
 		
-				<div class="mt-4">
+				<!-- <div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
 					</div>
 			
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
