--- a/base/templates/club_view.html
+++ b/base/templates/club_view.html
@@ -6,8 +6,8 @@
 
     
     <div class="card card-body mx-3">
-        <table class="table ">
-            <thead>
+        <table class="table table-striped">
+            <thead class="table_head">
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Designation</th>
