--- a/base/templates/items_view.html
+++ b/base/templates/items_view.html
@@ -19,7 +19,7 @@
 
                     <div class="col-xs-3 col-sm-3 col-md-3">
                         <!-- This is second coloumn of that row-->
-                        <div class="card" style="width: 220px;">
+                        <div class="card_item" style="width: 220px;">
                             <img src="/media/{{i.image}}" class="card-img-top" alt="{{i.item_name}}" height="220px" width="220px">
                             {% comment %} <img src="{{i.image.url}}" class="card-img-top" alt="{{i.item_name}}" height="220px" width="220px"> {% endcomment %}
                             <a href="{% url 'item_update' club.id i.id %}"><div class="card-body">
@@ -60,8 +60,8 @@
 </div>
 
 <div class="card card-body mx-4">
-    <table class="table ">
-        <thead>
+    <table class="table table-striped">
+        <thead class="table_head">
             <tr>
                 <th scope="col">Requested By</th>
                 <th scope="col">Roll No</th>
