Readme updation and minor bug fixes

--- a/base/templates/club_view.html
+++ b/base/templates/club_view.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    
+    <h3 class="mx-4 my-1">Users</h3>
     <div class="card card-body mx-3">
         <table class="table table-striped">
             <thead class="table_head">
