--- a/base/templates/index_member.html
+++ b/base/templates/index_member.html
@@ -63,8 +63,8 @@
     </div>
     <!--Show requests made only by that user (if any)-->
     <div class="card card-body mx-4">
-        <table class="table ">
-            <thead>
+        <table class="table table-striped">
+            <thead class="table_head">
                 <tr>
                     <th scope="col">Requested By</th>
                     <th scope="col">Roll No</th>
